fixed some responsive bugs sett z-index from mobile dialog higher then drop-down-menu

--- a/style/contacts.css
+++ b/style/contacts.css
@@ -121,7 +121,6 @@ html, body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding-bottom: 60px;
 }
 
 .contact_card{
@@ -131,12 +130,14 @@ html, body {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
+   
+    
 }
 
 .contact_card:hover{
-    background-color: #2A3647;
-    color: white;
+    background-color: #eff1f1b9;
+    color: rgb(0, 0, 0);
     cursor: pointer;
 }
 
@@ -737,6 +738,12 @@ html, body {
         width: 100%;
         height: 100%;
      }
+
+     .contactslist_container{
+        background-color: #ffffff;
+        box-shadow: 0px 0px 0px 0px #cfcfcf;
+        height: calc(100% - 90px);
+    }
 }
 
 /* mobile responsive*/
@@ -834,7 +841,7 @@ html, body {
     .add_new_contact_Mobile_btn{
         display: flex;
         position: fixed;
-        right: 40px;
+        right: 30px;
         
     }
 
